[package]
name = "backuplit"
version = "0.1.1"
edition = "2021"
description = "Backup a directory on a linux filesystem to Google Cloud Storage"
license = "MIT"

[[bin]]
name = "backuplit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.4.13", features = ["derive", "env"] }
flate2 = "1.0.28"
google-cloud = { version = "0.2.1", features = ["storage"] }
inotify = "0.10.2"
tar = "0.4.40"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
