[package]
name = "backuplit"
version = "0.1.4"
edition = "2021"
description = "Backup a directory on a linux filesystem to Google Cloud Storage"
license = "MIT"
repository = "https://github.com/kodylow/backuplit"

[[bin]]
name = "backuplit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
flate2 = "1.1.9"
google-cloud-storage = "1.8.0"
inotify = "0.11.0"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = true
